--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -38,6 +38,7 @@
       }
     ]
   },
+  "requiredBackgroundModes":["location"],
   "permission": {
     "scope.userLocation": {
       "desc": "你的位置信息将用于小程序位置接口的效果展示"
